- Draw Text content instead of overlapping it in xaml - MainText SecondaryText properties added - refactor property changed handeling - Enabled LangVersion preview, for c#9

--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -5,6 +5,10 @@
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
   </PropertyGroup>
 
+	<PropertyGroup>
+		<LangVersion>preview</LangVersion>
+	</PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
