--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
 	  <PackageReference Include="JonLipsky.System.Graphics" Version="0.1.36" />
-	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.0.0" />
+	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0-pre2" />
 	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.763-beta" />
