--- a/XamsungHealth.Lib/XamsungHealth.Lib.csproj
+++ b/XamsungHealth.Lib/XamsungHealth.Lib.csproj
@@ -17,4 +17,7 @@
 	  <PackageReference Include="JonLipsky.System.Graphics" Version="0.1.36" />
 	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
 </Project>
