--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -17,8 +17,8 @@
   <ItemGroup>
 	  <PackageReference Include="JonLipsky.System.Graphics" Version="0.1.36" />
 	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0-pre2" />
-	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.763-beta" />
   </ItemGroup>
 
@@ -30,7 +30,7 @@
     <Compile Update="Controls\GraphicControls\ProgressCircle.xaml.cs">
       <DependentUpon>ProgressCircle.xaml</DependentUpon>
     </Compile>
-    <Compile Update="HomePage.xaml.cs">
+    <Compile Update="Views\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -39,5 +39,10 @@
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Templates\" />
   </ItemGroup>
 </Project>
