--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -7,6 +7,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
+		<!--<Nullable>enable</Nullable>
+		<WarningsAsErrors>nullable</WarningsAsErrors>-->
 	</PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -15,10 +17,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="JonLipsky.System.Graphics" Version="0.1.36" />
+	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
 	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0-pre2" />
+	  <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.1.0-pre1" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.763-beta" />
   </ItemGroup>
 
