--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -7,8 +7,8 @@
 
 	<PropertyGroup>
 		<LangVersion>preview</LangVersion>
-		<!--<Nullable>enable</Nullable>
-		<WarningsAsErrors>nullable</WarningsAsErrors>-->
+		<Nullable>enable</Nullable>
+		<WarningsAsErrors>nullable</WarningsAsErrors>
 	</PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
