--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -17,6 +17,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\**" />
+    <Compile Remove="Templates\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <EmbeddedResource Remove="Templates\**" />
+    <None Remove="Models\**" />
+    <None Remove="Templates\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="Xamanimation" Version="1.3.0" />
 	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
 	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
@@ -44,10 +53,5 @@
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Templates\" />
   </ItemGroup>
 </Project>
