--- a/XamsungHealth.Lib/XamsungHealth.Lib.csproj
+++ b/XamsungHealth.Lib/XamsungHealth.Lib.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   <ItemGroup>
 	  <PackageReference Include="JonLipsky.System.Graphics" Version="0.1.36" />
-	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0-pre2" />
+	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
 	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
   </ItemGroup>
 </Project>
