--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -25,7 +25,7 @@
   <ItemGroup>
 	  <PackageReference Include="Xamanimation" Version="1.3.0" />
 	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.2.0-pre2" />
+	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
 	  <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.2.0-pre2" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="2.3.0.763-beta" />
@@ -52,6 +52,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\Popup\CancelPopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
