--- a/XamsungHealth/XamsungHealth.csproj
+++ b/XamsungHealth/XamsungHealth.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Xamanimation" Version="1.3.0" />
+  <PackageReference Include="Xamanimation" Version="1.3.0" />
 	  <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
 	  <PackageReference Include="Xamarin.CommunityToolkit" Version="1.1.0" />
 	  <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.2.0-pre2" />
@@ -35,7 +35,7 @@
     <ProjectReference Include="..\XamsungHealth.Lib\XamsungHealth.Lib.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
+   <ItemGroup>
     <Compile Update="Controls\GraphicControls\ProgressCircle.xaml.cs">
       <DependentUpon>ProgressCircle.xaml</DependentUpon>
     </Compile>
@@ -51,10 +51,16 @@
     <EmbeddedResource Update="AppShell.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Templates\MenuTemplates.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\Flyout\ProfilePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Popup\CancelPopup.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\SettingsPage.xaml">
+    <EmbeddedResource Update="Views\Flyout\SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
