--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -49,7 +49,7 @@ on:
 jobs:
 
   build:
-    runs-on: windows-latest  # For a list of available runner types, refer to
+    runs-on: macos-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
 #    env:
@@ -64,18 +64,12 @@ jobs:
 #      with:
 #        fetch-depth: 0
 
-    # Install the .NET Core workload
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 5.0.x
-
     # Restore Nuget packages
     - name: Restore NuGet packages
       run: nuget restore
  
     - name: Build
-      run: msbuild XamsungHealth.Android/XamsungHealth.Android.csproj /t:PackageForAndroid /p:Configuration=Debug
+      run: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\bin\msbuild XamsungHealth.Android\XamsungHealth.Android.csproj /t:PackageForAndroid /p:Configuration=Debug
         
       
     # Execute all unit tests in the solution
