--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -67,9 +67,13 @@ jobs:
     # Restore Nuget packages
     - name: Restore NuGet packages
       run: nuget restore
- 
+
+    # Helps set up MSBuild into PATH for later usage
+    - name: setup-msbuild
+      uses: microsoft/setup-msbuild@v1.1
+  
     - name: Build
-      run: C:\Program Files\Microsoft Visual Studio\2022\Enterprise\MSBuild\Current\bin\msbuild XamsungHealth.Android\XamsungHealth.Android.csproj /t:PackageForAndroid /p:Configuration=Debug
+      run: msbuild XamsungHealth.Android\XamsungHealth.Android.csproj /t:PackageForAndroid /p:Configuration=Debug
         
       
     # Execute all unit tests in the solution
